--- a/project_attos/app_attos/templates/app_attos/instagram_button.html
+++ b/project_attos/app_attos/templates/app_attos/instagram_button.html
@@ -1,3 +1,3 @@
 <a href="{{ instagram_link }}" target="_blank">
-    <button>Ir para o Instagram</button>
+    <button>{{ nomeRede }}</button>
 </a>
