--- a/project_attos/app_attos/templates/app_attos/instagram_form.html
+++ b/project_attos/app_attos/templates/app_attos/instagram_form.html
@@ -1,7 +1,15 @@
+<fieldset >
+    <legend> <h3> Qual rede social deseja inserir? </h3></legend>
 <form method="post" action="{% url 'instagram_button' %}">
     {% csrf_token %}
-    <label for="instagram_link">Link do Instagram:</label>
-    <input type="text" name="instagram_link" id="instagram_link" required>
+    <label>Nome</label>
+    <input placeholder="Insira o nome" type="text" name ="nomeRede" id="nomeRede" required>
     <br>
-    <input type="submit" value="Clique aqui para confirmar">
+    <br>
+    <label for="instagram_link">Link</label>
+    <input placeholder="Insira o link" type type="text" name="instagram_link" id="instagram_link" required>
+    <br>
+    <br>
+    <input type="submit" value="confirmar">
 </form>
+</fieldset>
