--- a/project_attos/app_attos/templates/cadastro/cadastro.html
+++ b/project_attos/app_attos/templates/cadastro/cadastro.html
@@ -3,6 +3,10 @@
     <input type="text" name="nome-usuario" placeholder="Nome de usuário" required>
     <input type="email" name="email" placeholder="E-mail" required>
     <input type="password" name="senha" placeholder="Senha" required>
+    <input type="phone" name="telefone" placeholder="Telefone" required>
+    <input type="adress" name="endereco" placeholder="Endereço" required>
+    <input type="year" name="ano_fundacao" placeholder="Ano Fundação" required>
+    <input type="category" name="categoria" placeholder="Categoria" required>
     <input type="submit" value="Cadastrar">
 </form>
 
