--- a/project_attos/app_attos/templates/pages/page.html
+++ b/project_attos/app_attos/templates/pages/page.html
@@ -6,5 +6,9 @@
 <body>
     <h1>ONG {{ usuario.username }}</h1>
     <p>Email: {{ usuario.email }}</p>
+    <p>Telefone: {{ user_profile.phone }}</p>
+    <p>Endereço: {{ user_profile.address }}</p>
+    <p>Ano da fundção: {{ user_profile.year }}</p>
+    <p>Categoria: {{ user_profile.category}}</p>
 </body>
 </html>
