--- a/project_attos/app_attos/templates/cadastro/cadastro.html
+++ b/project_attos/app_attos/templates/cadastro/cadastro.html
@@ -1,12 +1,16 @@
 <form method="post" action="{% url 'cadastrar_usuario' %}">
     {% csrf_token %}
-    <input type="text" name="nome-usuario" placeholder="Nome de usuário" required>
-    <input type="email" name="email" placeholder="E-mail" required>
-    <input type="password" name="senha" placeholder="Senha" required>
-    <input type="phone" name="telefone" placeholder="Telefone" required>
-    <input type="adress" name="endereco" placeholder="Endereço" required>
-    <input type="year" name="ano_fundacao" placeholder="Ano Fundação" required>
-    <input type="category" name="categoria" placeholder="Categoria" required>
-    <input type="submit" value="Cadastrar">
+    <div style="max-width: 300px; margin: 0 auto; padding: 20px; background-color: #f2f2f2; border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);">
+
+        <input type="text" name="nome-usuario" placeholder="Nome de usuário" required style="width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px;">
+        <input type="email" name="email" placeholder="E-mail" required style="width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px;">
+        <input type="password" name="senha" placeholder="Senha" required style="width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px;">
+        <input type="tel" name="telefone" placeholder="Telefone" required style="width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px;">
+        <input type="text" name="endereco" placeholder="Endereço" required style="width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px;">
+        <input type="number" name="ano_fundacao" placeholder="Ano Fundação" required style="width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px;">
+        <input type="text" name="categoria" placeholder="Categoria" required style="width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px;">
+
+        <input type="submit" value="Cadastrar" style="width: 100%; background-color: #007bff; color: #fff; padding: 10px; border: none; border-radius: 5px; cursor: pointer; font-weight: bold;">
+    </div>
 </form>
 
