--- a/project_attos/app_attos/templates/perfil/perfil.html
+++ b/project_attos/app_attos/templates/perfil/perfil.html
@@ -1,5 +1,10 @@
-<h1>Bem-vinde</h1>
-<form method="post" action="{% url 'sair' %}">
-    {% csrf_token %}
-    <input type="submit" value="Sair">
-</form>
+<div style="max-width: 300px; margin: 0 auto; padding: 20px; border-radius: 5px; text-align: center;">
+
+    <h1 style="font-size: 24px; margin: 10px 0;">Bem-vinde</h1>
+
+    <form method="post" action="{% url 'sair' %}" style="margin: 10px 0;">
+        {% csrf_token %}
+        <input type="submit" value="Sair" style="width: 30%; background-color: #007bff; color: #fff; padding: 10px; border: none; border-radius: 5px; cursor: pointer; font-weight: bold;">
+    </form>
+
+</div>
