--- a/project_attos/app_attos/templates/pages/page.html
+++ b/project_attos/app_attos/templates/pages/page.html
@@ -1,11 +1,19 @@
 <div style="max-width: 300px; margin: 0 auto; padding: 20px; border-radius: 5px; text-align: center;">
-
     <h1 style="font-size: 24px; margin: 10px 0;">ONG {{ usuario.username }}</h1>
-
     <p style="margin: 10px 0;">Email: {{ usuario.email }}</p>
     <p style="margin: 10px 0;">Telefone: {{ user_profile.phone }}</p>
     <p style="margin: 10px 0;">Endereço: {{ user_profile.address }}</p>
     <p style="margin: 10px 0;">Ano de Fundação: {{ user_profile.year }}</p>
     <p style="margin: 10px 0;">Categoria: {{ user_profile.category }}</p>
 
+    <p style="margin: 10px 0;">Redes Sociais:</p>
+    <ul>
+        {% for profile in profiles %}
+            <li>
+                <a href="{{ profile.instagram_link }}" target="_blank">
+                    <button>{{ profile.nomeRede }}</button>
+                </a>
+            </li>
+        {% endfor %}
+    </ul>
 </div>
