--- a/project_attos/app_attos/templates/app_attos/index.html
+++ b/project_attos/app_attos/templates/app_attos/index.html
@@ -7,14 +7,22 @@
     <input type="password" name="senha" placeholder="Senha" required style="width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px;">
     
     <input type="submit" value="Entrar" style="width: 100%; background-color: #007bff; color: #fff; padding: 10px; border: none; border-radius: 5px; cursor: pointer; font-weight: bold;">
+    
+    <p style="text-align: center;">É novo por aqui?</p>
+
+    <div style="text-align: center;">
+      <a href="{% url 'cadastrar' %}">Cadastre-se</a>
+    </div>
+
   </div>
 </form>
 
-{% if messages %}
-  <ul class="messages">
-    {% for message in messages %}
-      <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-    {% endfor %}
-  </ul>
-{% endif %}
-
+<div style="text-align: center;">
+  {% if messages %}
+    <ul class="messages" style="list-style-type: none; padding: 0;">
+      {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+      {% endfor %}
+    </ul>
+  {% endif %}
+</div>
