botão de voltar pag de cadastro

--- a/project_attos/app_attos/templates/cadastro/cadastro.html
+++ b/project_attos/app_attos/templates/cadastro/cadastro.html
@@ -11,6 +11,10 @@
         <input type="text" name="categoria" placeholder="Categoria" required style="width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px;">
 
         <input type="submit" value="Cadastrar" style="width: 100%; background-color: #007bff; color: #fff; padding: 10px; border: none; border-radius: 5px; cursor: pointer; font-weight: bold;">
+        <div style="text-align: center;">
+            <a href="{% url 'index' %}">voltar</a>
+          </div>
+      
     </div>
 </form>
 
