correção de botão de login em cadastro

--- a/project_attos/app_attos/templates/cadastro/cadastro.html
+++ b/project_attos/app_attos/templates/cadastro/cadastro.html
@@ -12,7 +12,8 @@
 
         <input type="submit" value="Cadastrar" style="width: 100%; background-color: #007bff; color: #fff; padding: 10px; border: none; border-radius: 5px; cursor: pointer; font-weight: bold;">
         <div style="text-align: center;">
-            <a href="{% url 'index' %}">voltar</a>
+            <p style="text-align: center;">Deseja fazer login?</p>
+            <a href="{% url 'index' %}">Login</a>
           </div>
       
     </div>
