--- a/project_attos/app_attos/templates/app_attos/index.html
+++ b/project_attos/app_attos/templates/app_attos/index.html
@@ -1,12 +1,15 @@
+<head>
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'app_attos.css' %}">
+  <link rel="stylesheet" href="{% static 'styles.css' %}">
+</head>
 <form method="post" action="{% url 'entrar' %}">
   {% csrf_token %}
-  <div style="max-width: 300px; margin: 0 auto; padding: 20px; background-color: #f2f2f2; border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);">
-
-    <input type="email" name="email" placeholder="E-mail" required style="width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px;">
+  <div class="container-inputs">
+    <input class="input" type="email" name="email" placeholder="E-mail" required>
+    <input class="input" type="password" name="senha" placeholder="Senha" required>
     
-    <input type="password" name="senha" placeholder="Senha" required style="width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px;">
-    
-    <input type="submit" value="Entrar" style="width: 100%; background-color: #007bff; color: #fff; padding: 10px; border: none; border-radius: 5px; cursor: pointer; font-weight: bold;">
+    <input type="submit" value="Entrar" class="submit">
     
     <p style="text-align: center;">É novo por aqui?</p>
 
