--- a/project_attos/app_attos/static/app_attos.css
+++ b/project_attos/app_attos/static/app_attos.css
@@ -1,3 +1,11 @@
+.main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 3rem;
+}
+
 .container-inputs {
   max-width: 300px; 
   margin: 0 auto; 
@@ -6,6 +14,13 @@
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
+
+img {
+  width: 300px;
+  height: 80px;
+  margin-bottom: 1rem;
+}
+
 .submit {
   width: 100%; 
   background-color: #007bff; 
