--- a/project_attos/app_attos/static/app_attos.css
+++ b/project_attos/app_attos/static/app_attos.css
@@ -22,12 +22,13 @@ img {
 }
 
 .submit {
+  margin-top: 1rem;
   width: 100%; 
   background-color: #007bff; 
   color: #fff; 
   padding: 10px; 
   border: none; 
-  border-radius: 5px; 
+  border-radius: 8px; 
   cursor: pointer; 
   font-weight: bold;
 }
