--- a/project_attos/app_attos/templates/app_attos/index.html
+++ b/project_attos/app_attos/templates/app_attos/index.html
@@ -14,16 +14,15 @@
       <label class="label" for="senha">Senha</label>
       <input class="input" id="senha" type="password" name="senha" required>
       
-      <input type="submit" value="Entrar" class="submit">
-      
-      <p style="text-align: center;">É novo por aqui?</p>
-  
-      <div style="text-align: center;">
-        <a href="{% url 'cadastrar' %}">Cadastre-se</a>
-      </div>
-  
+      <button type="submit" value="Entrar" class="submit">
+        Entrar
+      </button>
     </div>
   </form>
+  <div style="text-align: center;">
+    <span>É novo por aqui? </span>
+    <a href="{% url 'cadastrar' %}">Cadastre-se</a>
+  </div>
   
   <div style="text-align: center;">
     {% if messages %}
