--- a/project_attos/app_attos/templates/cadastro/cadastro.html
+++ b/project_attos/app_attos/templates/cadastro/cadastro.html
@@ -1,21 +1,25 @@
+<head>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
+</head>
+
 <form method="post" action="{% url 'cadastrar_usuario' %}">
     {% csrf_token %}
     <div style="max-width: 300px; margin: 0 auto; padding: 20px; background-color: #f2f2f2; border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);">
 
-        <input type="text" name="nome-usuario" placeholder="Nome de usuário" required style="width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px;">
-        <input type="email" name="email" placeholder="E-mail" required style="width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px;">
-        <input type="password" name="senha" placeholder="Senha" required style="width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px;">
-        <input type="tel" name="telefone" placeholder="Telefone" required style="width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px;">
-        <input type="text" name="endereco" placeholder="Endereço" required style="width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px;">
-        <input type="number" name="ano_fundacao" placeholder="Ano Fundação" required style="width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px;">
-        <input type="text" name="categoria" placeholder="Categoria" required style="width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px;">
+        <input type="text" name="nome-usuario" placeholder="Nome de usuário" required class="input">
+        <input type="email" name="email" placeholder="E-mail" required class="input">
+        <input type="password" name="senha" placeholder="Senha" required class="input">
+        <input type="tel" name="telefone" placeholder="Telefone" required class="input">
+        <input type="text" name="endereco" placeholder="Endereço" required class="input">
+        <input type="number" name="ano_fundacao" placeholder="Ano Fundação" required class="input">
+        <input type="text" name="categoria" placeholder="Categoria" required class="input">
 
         <input type="submit" value="Cadastrar" style="width: 100%; background-color: #007bff; color: #fff; padding: 10px; border: none; border-radius: 5px; cursor: pointer; font-weight: bold;">
         <div style="text-align: center;">
             <p style="text-align: center;">Deseja fazer login?</p>
             <a href="{% url 'index' %}">Login</a>
-          </div>
-      
+        </div>
     </div>
 </form>
 
