adicionando logo pagina da ong

--- a/project_attos/app_attos/templates/pages/page.html
+++ b/project_attos/app_attos/templates/pages/page.html
@@ -4,6 +4,7 @@
 </head>
 
 <div style="max-width: 300px; margin: 0 auto; padding: 20px; border-radius: 5px; text-align: center;">
+    <img width="300px" height="80px" src="{% static 'images/logo.png' %}" alt="Logo da Attos">
     <h1 class="text-top">ONG {{ usuario.username }}</h1>
     <p class="text">Email: {{ usuario.email }}</p>
     <p class="text">Telefone: {{ user_profile.phone }}</p>
