add view fotos e models fotos

--- a/project_attos/app_attos/templates/pages/page.html
+++ b/project_attos/app_attos/templates/pages/page.html
@@ -21,3 +21,14 @@
         {% endfor %}
     </ul>
 </div>
+
+<div>
+    <h2>Fotos</h2>
+    <ul>
+        {% for foto in fotos %}
+            <li>
+                <img src="{{ foto.foto.url }}" alt="Foto">
+            </li>
+        {% endfor %}
+    </ul>
+</div>
