add removendo fotos e corrigindo html

--- a/project_attos/app_attos/templates/pages/page.html
+++ b/project_attos/app_attos/templates/pages/page.html
@@ -1,34 +1,49 @@
+<!DOCTYPE html>
+<html>
 <head>
     {% load static %}
     <link rel="stylesheet" href="{% static 'styles.css' %}">
+    <style>
+        .photo-gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+        }
+
+        .photo-gallery img {
+            max-width: calc(25% - 10px); /* Define o tamanho das imagens em colunas de 4 com margem entre elas */
+            margin-bottom: 10px; /* Espaço entre as imagens */
+        }
+    </style>
 </head>
 
-<div style="max-width: 300px; margin: 0 auto; padding: 20px; border-radius: 5px; text-align: center;">
-    <img width="300px" height="80px" src="{% static 'images/logo.png' %}" alt="Logo da Attos">
-    <h1 class="text-top">ONG {{ usuario.username }}</h1>
-    <p class="text">Email: {{ usuario.email }}</p>
-    <p class="text">Telefone: {{ user_profile.phone }}</p>
-    <p class="text">Endereço: {{ user_profile.address }}</p>
-    <p class="text">Ano de Fundação: {{ user_profile.year }}</p>
-    <p class="text">Categoria: {{ user_profile.category }}</p>
+<body>
+    <div style="max-width: 300px; margin: 0 auto; padding: 20px; border-radius: 5px; text-align: center;">
+        <img width="300px" height="80px" src="{% static 'images/logo.png' %}" alt="Logo da Attos">
+        <h1 class="text-top">ONG {{ usuario.username }}</h1>
+        <p class="text">Email: {{ usuario.email }}</p>
+        <p class="text">Telefone: {{ user_profile.phone }}</p>
+        <p class="text">Endereço: {{ user_profile.address }}</p>
+        <p class="text">Ano de Fundação: {{ user_profile.year }}</p>
+        <p class="text">Categoria: {{ user_profile.category }}</p>
 
-    <p class="text" >Redes Sociais:</p>
-    <ul>
-        {% for profile in profiles %}
+        <p class="text" >Redes Sociais:</p>
+        <ul>
+            {% for profile in profiles %}
                 <a href="{{ profile.instagram_link }}" target="_blank">
                     <button class="botao">{{ profile.nomeRede }}</button>
                 </a>
-        {% endfor %}
-    </ul>
-</div>
+            {% endfor %}
+        </ul>
+    </div>
 
-<div>
-    <h2>Fotos</h2>
-    <ul>
-        {% for foto in fotos %}
-            <li>
+    <div>
+        <h2>Fotos</h2>
+        <div class="photo-gallery">
+            {% for foto in fotos %}
                 <img src="{{ foto.foto.url }}" alt="Foto">
-            </li>
-        {% endfor %}
-    </ul>
-</div>
+            {% endfor %}
+        </div>
+    </div>
+</body>
+</html>
