add data de ultima att

--- a/project_attos/app_attos/templates/pages/page.html
+++ b/project_attos/app_attos/templates/pages/page.html
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+    <p style="text-align: right;"><small>Última atualização em: {{ current_datetime }}</small></p>
     <div style="max-width: 300px; margin: 0 auto; padding: 20px; border-radius: 5px; text-align: center;">
         <img width="300px" height="80px" src="{% static 'images/logo.png' %}" alt="Logo da Attos">
         <h1 class="text-top">ONG {{ usuario.username }}</h1>
