--- a/project_attos/app_attos/static/styles.css
+++ b/project_attos/app_attos/static/styles.css
@@ -1,34 +1,123 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@700;800;900&display=swap');
-
 body {
-  font-family: 'Inter', sans-serif;
+  font-family: Arial, sans-serif;
 }
+
+.navbar {
+  background-color:#bababa; 
+  height: 60px;
+  overflow: hidden;
+  position: fixed;
+  top: 0; 
+  right: 0; 
+  width: 100%; 
+  display: flex;
+  z-index: 1; 
+}
+
+
+.navbar ul {
+  list-style-type: none;
+}
+
+.navbar li {
+  display: inline;
+}
+
+.navbar li a {
+  color: black; 
+  text-decoration: none;
+}
+
+.navbar li a:hover {
+  background-color: #555; 
+}
+
+.logo {
+  margin-left: 8px;
+  margin-top: -10px;
+  margin-bottom: -15px;
+  margin-right: 20px;
+}
+
+.menu-item{
+  margin-right: 20px;
+}
+
+.main-container {
+  max-width: 300px; 
+  margin: 0 auto 0 auto; 
+}
+
+.name-login{
+  text-align: center;
+}
+
+.esqueci-senha{
+  margin-top: 5px;
+  text-align: center;
+  color: #0090E1;
+}
+.retangulo {
+  width: 400px;
+  height: 550px;
+  top: 100px;
+  right: 10%;
+  border-radius: 17px;
+  position: absolute;
+  box-shadow: 0px 4px 20px 0px #00000040;
+  background-color: rgba(255, 255, 255, 0.5); 
+  border: none; 
+}
+
+
 .input {
   width: 100%;
   padding: 10px;
-  margin: 10px 0;
+  margin-bottom: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  font-family: 'Inter', sans-serif;
 }
 
-.text{
-  font-family: 'Inter', sans-serif;
-  text-align: left;
+.centralizarlogin{
+  margin-top: 120px;
 }
 
-.botao{
-  width: 70%;
-  background-color: #007bff;
-  color: #fff;
+.submit {
+  width: 35%;
+  height: 32px;
+  background-color: #bababa;
+  color: black;
   padding: 10px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-family: 'Inter', sans-serif;
 }
 
-.label {
-  display: block;
-  margin-bottom: 8px;
+.submit2{
+  width: 70%;
+  height: 32px;
+  background-color: #bababa;
+  color: black;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  text-align: center;
 }
+
+.texto1{
+  margin-top: -160%;
+  margin-left: -310%;
+}
+
+.texto2{
+  margin-top: -35%;
+  margin-left: -310%;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+
