--- a/project_attos/app_attos/templates/home/home.html
+++ b/project_attos/app_attos/templates/home/home.html
@@ -1,4 +1,44 @@
 <head>
-
-    <h1> HELLO  </h1>
-</head>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'login.css' %}">
+  </head>
+  <body>
+  <div class="navbar">
+    <ul>
+      <li><svg width="100" height="50" viewBox="0 0 148 50" fill="none" xmlns="http://www.w3.org/2000/svg" class="logo">
+          <path
+            d="M42.1662 49.4212H31.6109V24.5111H17.4676V49.4212H6.91232V24.5111H1V16.0657H6.91232V14.3084C6.91232 11.3353 7.53853 8.84737 8.79377 6.84462C10.049 4.84188 11.7189 3.36662 13.8034 2.41884C15.888 1.47389 18.1615 1 20.6269 1C23.5859 1 26.1387 1.63185 28.2909 2.89273L25.1993 10.0547C23.9441 9.60615 22.8694 9.38049 21.9724 9.38049C20.5817 9.38049 19.4845 9.79796 18.6777 10.6301C17.871 11.465 17.4676 12.6695 17.4676 14.2435V16.0685H42.1691V49.4241L42.1662 49.4212ZM32.429 11.0222C31.2809 9.94182 30.7055 8.56811 30.7055 6.90104C30.7055 5.23397 31.2894 3.79256 32.4628 2.7122C33.6334 1.63185 35.12 1.09026 36.9224 1.09026C38.7249 1.09026 40.2086 1.63185 41.3821 2.7122C42.5527 3.79256 43.1394 5.18884 43.1394 6.90104C43.1394 8.61324 42.564 9.94182 41.4159 11.0222C40.2679 12.1025 38.77 12.6441 36.9224 12.6441C35.0748 12.6441 33.5798 12.1025 32.429 11.0222Z"
+            fill="black" stroke="black" stroke-width="0.282076" stroke-miterlimit="10" />
+          <path d="M47.0236 2.13062H57.5789V49.4207H47.0236V2.13062Z" fill="black" stroke="black" stroke-width="0.282076"
+            stroke-miterlimit="10" />
+          <path d="M61.3785 2.13062H71.9338V49.4207H61.3785V2.13062Z" fill="black" stroke="black" stroke-width="0.282076"
+            stroke-miterlimit="10" />
+          <path
+            d="M106.265 12.1001C106.265 12.1001 103.157 24.6722 102.573 33.5266C101.989 42.381 106.209 43.7124 108.519 44.0029C109.8 44.1637 111.656 44.3837 113.726 42.7618C117.726 39.6279 119.198 34.9088 121.238 28.6213C123.799 20.726 124.829 13.5584 124.936 13.0789"
+            stroke="black" stroke-width="8.74437" stroke-miterlimit="10" />
+          <path
+            d="M86.0488 12.1421C86.0488 12.1421 82.5708 24.3334 81.9869 33.1878C81.7584 36.6489 82.5116 40.22 84.4494 42.0817C87.3576 44.8799 91.7806 44.5329 93.7918 43.6472C101.913 40.0677 102.607 31.879 102.79 31.0525"
+            stroke="black" stroke-width="8.74437" stroke-miterlimit="10" />
+          <path
+            d="M125.147 12.1873C125.147 12.1873 124.524 14.2662 124.699 16.4212C125.198 22.5733 139.155 29.6252 141.316 35.4078C142.111 37.5346 142.772 41.2919 139.22 44.0873C138.069 44.9927 135.55 45.7177 133.105 44.6119C131.773 44.0111 130.338 42.0986 130.453 39.6897C130.513 38.4965 130.637 37.9126 131.297 36.5163C132.03 34.9706 134.927 31.6139 134.927 31.6139"
+            stroke="black" stroke-width="8.74437" stroke-miterlimit="10" />
+          <path d="M141.009 25.8569L145 21.6257" stroke="#ED1C24" stroke-width="7.89814" stroke-miterlimit="10" />
+        </svg>
+      </li>
+      <li class="menu-item">Ajuda</a></li>
+      <li class="menu-item">Sobre</a></li>
+    </ul>
+  </div>
+</body>
+    <br>
+    <br>
+    <br>
+    <br>
+      <form method="post" action="{% url 'pagina_de_perfil' %}">
+        {% csrf_token %}
+        <!-- Seu formulário e conteúdo aqui -->
+        <button type="submit">ADICIONAR</button>
+    </form>
+    
+</body>
+</html>
