--- a/project_attos/app_attos/static/cadastro.css
+++ b/project_attos/app_attos/static/cadastro.css
@@ -1,10 +1,12 @@
 body {
     font-family: Arial, sans-serif;
+    background-color: #FAF7ED;
   }
   
   
   .navbar {
-    background-color:#bababa;
+    background-color: #FAF7ED;
+    box-shadow: 0px 0px 15px 0px #00000040;
     height: 60px;
     overflow: hidden;
     position: fixed;
@@ -12,9 +14,8 @@ body {
     right: 0;
     width: 100%;
     display: flex;
-    z-index: 1;
+    z-index: 999;
   }
-  
   
   
   
@@ -40,11 +41,17 @@ body {
   
   
   .logo {
-    margin-left: 8px;
+    margin-left: 25px;
     margin-top: -10px;
     margin-bottom: -15px;
     margin-right: 20px;
   }
+
+  
+.menu-item {
+  margin-right: 20px;
+}
+
   
   
   .main-container {
@@ -73,7 +80,7 @@ body {
     border-radius: 17px;
     position: absolute;
     box-shadow: 0px 4px 20px 0px #00000040;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: #FAF7ED;
     border: none;
   }
   
@@ -92,7 +99,7 @@ body {
   .submit {
     width: 35%;
     height: 32px;
-    background-color: #bababa;
+    background-color: #327261;
     color: black;
     padding: 10px;
     border: none;
