descriçao de perfil do usuário

--- a/project_attos/app_attos/templates/pages/page.html
+++ b/project_attos/app_attos/templates/pages/page.html
@@ -31,6 +31,10 @@
             <h2>A ONG possui </h2>
             <h2>{{ quantidade_doadores }} + doadores</h2>
         </div>
+        <div>
+            <h2>Descrição do Perfil:</h2>
+            <p>{{ descricao_perfil }}</p>
+        </div>
 
         <p class="text">Redes Sociais:</p>
         <ul>
