--- a/project_attos/app_attos/templates/pages/page.html
+++ b/project_attos/app_attos/templates/pages/page.html
@@ -25,7 +25,7 @@
     <div style="max-width: 300px; margin: 0 auto; padding: 20px; border-radius: 5px; text-align: center;">
         <img width="300px" height="80px" src="{% static 'images/logo.png' %}" alt="Logo da Attos">
         <h1 class="text-top">ONG {{ usuario.username }}</h1>
-        <p class="text">Email: {{ usuario.email }}</p>
+        <p class="text">Email: {{ usuario.userprofile.email  }}</p>
 
         <div>
             <h2>A ONG possui </h2>
@@ -40,7 +40,7 @@
         <ul>
             {% for profile in profiles %}
             <a href="{{ profile.instagram_link }}" target="_blank">
-                <button class="botao">{{ profile.nomeRede }}</button>
+                <button class="botao" style="display: inline-block; padding: 10px 20px; background-color: #808080; color: #fff; text-decoration: none; border: none; border-radius: 5px; font-weight: bold;">{{ profile.nomeRede }}</button>
             </a>
             {% endfor %}
         </ul>
