--- a/project_attos/app_attos/templates/perfil/perfil.html
+++ b/project_attos/app_attos/templates/perfil/perfil.html
@@ -27,8 +27,14 @@
       </li>
       <li class="menu-item">Ajuda</a></li>
       <li class="menu-item">Sobre</a></li>
+      <li class="menu-item">
+        <a href="{% url 'editar_perfil_ong' %}">
+            <button class="botao" style="background-color: #808080; color: #fff; padding: 10px 20px; border: none; border-radius: 5px; font-weight: bold;">Editar Perfil</button>
+        </a>
+    </li>
     </ul>
   </div>
+
 </body>
 <div style="max-width: 300px; margin: 0 auto; padding: 20px; border-radius: 5px; text-align: center;">
     <h1 style="font-size: 24px; margin: 10px 0;">Bem-vindo</h1>
