--- a/project_attos/app_attos/templates/perfil/perfil.html
+++ b/project_attos/app_attos/templates/perfil/perfil.html
@@ -54,12 +54,12 @@
         <label>Nome</label>
         <input placeholder="Insira o nome" type="text" name="nomeRede" id="nomeRede" required>
         <br>
-        <br>
+        <br>  
         <label for="instagram_link">Link</label>
         <input placeholder="Insira o link" type="text" name="instagram_link" id="instagram_link" required>
         <br>
         <br>
-        <input type="submit" value="Confirmar">
+        <input type="submit" value="Confirmar" name="confirmar1">
     </form>
 </fieldset>
 
