--- a/project_attos/app_attos/templates/perfil/perfil.html
+++ b/project_attos/app_attos/templates/perfil/perfil.html
@@ -118,7 +118,7 @@
                 </li>
                 {% endfor %}
             </ul>
-            <button type="submit">Remover Fotos Selecionadas</button>
+            <button type="submit" name="remover">Remover Fotos Selecionadas</button>
             
         </fieldset>
     </form>
