--- a/project_attos/app_attos/templates/perfil/perfil.html
+++ b/project_attos/app_attos/templates/perfil/perfil.html
@@ -29,7 +29,7 @@
       <li class="menu-item">Sobre</a></li>
       <li class="menu-item">
         <a href="{% url 'editar_perfil_ong' %}">
-            <button class="botao" style="background-color: #808080; color: #fff; padding: 10px 20px; border: none; border-radius: 5px; font-weight: bold;">Editar Perfil</button>
+            <button class="botao" name="botao_editar" style="background-color: #808080; color: #fff; padding: 10px 20px; border: none; border-radius: 5px; font-weight: bold;">Editar Perfil</button>
         </a>
     </li>
     </ul>
