--- a/project_attos/app_attos/templates/pages/page.html
+++ b/project_attos/app_attos/templates/pages/page.html
@@ -27,7 +27,7 @@
         <h1 class="text-top">ONG {{ usuario.username }}</h1>
         <p class="text">Email: {{ usuario.userprofile.email  }}</p>
 
-        <div>
+        <div name='quantidade_doadores'>
             <h2>A ONG possui </h2>
             <h2>{{ quantidade_doadores }} + doadores</h2>
         </div>
