--- a/project_attos/app_attos/templates/perfil/perfil.html
+++ b/project_attos/app_attos/templates/perfil/perfil.html
@@ -63,7 +63,7 @@
       <input placeholder="Endereço" type="text" name="endereco_ong" id="endereco_ong" required>
       <br>
       <br>
-      <input type="submit" value="Confirmar" name="confirmar1">
+      <input type="submit" value="Confirmar" name="confirmar_ong">
   </form>
 </fieldset>
 
