--- a/project_attos/app_attos/templates/pages/page.html
+++ b/project_attos/app_attos/templates/pages/page.html
@@ -25,7 +25,7 @@
     <div style="max-width: 300px; margin: 0 auto; padding: 20px; border-radius: 5px; text-align: center;">
         <img width="300px" height="80px" src="{% static 'images/logo.png' %}" alt="Logo da Attos">
         <h1 class="text-top">ONG {{ usuario.username }}</h1>
-        <p class="text">Email: {{ usuario.userprofile.email_ong }}</p>
+        <p class="text" name="email_ong">Email: {{ usuario.userprofile.email_ong }}</p>
         <p class="text">Endereço: {{ usuario.userprofile.endereco_ong }}</p>
         <p class="text">Ano de Fundação: {{ usuario.userprofile.ano_fundacao }}</p>
 
