--- a/project_attos/app_attos/templates/pages/page.html
+++ b/project_attos/app_attos/templates/pages/page.html
@@ -83,7 +83,7 @@
 
     <title>Barra de Carregamento</title>
     <h1>Meta de Doação</h1>
-    <p>Meta Anual: {{meta}}</p>
+    <p name="meta">Meta Anual: {{meta}}</p>
     <p name = 'valor_arrecadado'>Valor Arrecadado: {{valor_doado}}</p>
     <progress value={{valor_doado}} max={{meta}}></progress>
 
